[package]
name = "nzm_cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.2"
rand = "0.8"
rand_distr = "0.4"
byteorder = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
screenshots = "0.8"
image = "0.25"  # 确保是 0.25
hex = "0.4"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
windows = { version = "0.52", features = [
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",  # <--- 必须加上这一行！
] }